prodMetadata/src/objects/Activity_Junction__c.object
<CustomObject>
    <fields>
        <fullName>AIR_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIR_Overdue__c</fullName>
        <formula>IF ((AND ( AIR_Required__c = True, AIR_Completed__c = False,  Date_of_Call__c  +2 &lt; DATEVALUE(NOW()))), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIR Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Track_a_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Overview__c</fullName>
        <description>Overview field for use in dashboard.</description>
        <formula>text(Date_of_Call__c) +&quot; [&quot; +  Assigned_To__r.LastName   + &quot;] &quot; +  text(Type__c)  + &quot;: &quot; +  Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName + &quot; [&quot; +  

if( ispickval(Contact__r.Account.kw__KW_Category__c, &quot;Fed Legislator Office&quot;), &quot;Office: &quot; +
    substitute(
     substitute(
      substitute(
       substitute(
        left(Contact__r.Account.Name, find(&quot; (&quot;, Contact__r.Account.Name) -1)
       , &quot;Capitol Office of &quot;, &quot;&quot;)
      , &quot;District Office of &quot;, &quot;&quot;)
     , &quot;Sen. &quot;, &quot;&quot;)
    , &quot;Rep. &quot;, &quot;&quot;)
,  Contact__r.Account.kw__Office_Code__c )

+ &quot;] - Subject: &quot; + Name</formula>
        <inlineHelpText>Overview field for use in dashboard.</inlineHelpText>
        <label>Call Overview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Track a Calls</relationshipLabel>
        <relationshipName>Track_a_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a blank box so the dashboard has a value.</description>
        <inlineHelpText>Just a blank box so the dashboard has a value.</inlineHelpText>
        <label>Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Call__c</fullName>
        <label>Date of Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Call_Notes_to_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is checked, a copy of the Call Notes will be sent to owner&apos;s manager by workflow &quot;Send Track a Call Call Notes to Manager&quot;.</description>
        <inlineHelpText>When this is checked, a copy of the Call Notes will be sent to owner&apos;s manager.</inlineHelpText>
        <label>Send Call Notes to Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Completed - no email</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>E-Mail Exchange</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Testimony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Track a Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Call__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Christina_Roof_s_Track_a_Calls</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Call_Notes__c</columns>
        <columns>Date_of_Call__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Christina Roof</value>
        </filters>
        <label>Christina Roof&apos;s Track a Calls</label>
    </listViews>
    <listViews>
        <fullName>Completed_Track_A_Calls</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Call__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Call_Overview__c</columns>
        <columns>AIR_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Track A Calls</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_track_a_calls</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Call__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>AIR_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Incomplete track a calls</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Track a Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>mustAddSubject</fullName>
        <active>true</active>
        <description>the end user must add a subject for a track a call, they cannot leave the field blank or keep the default subject of Track A Call</description>
        <errorConditionFormula>ISBLANK(Name) ||
Name = &apos;Track a Call&apos; &amp;&amp;
$Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorMessage>You must enter a Subject for this Track a Call. The Subject cannot be &quot;Track a Call&quot;, you must enter something more specific.</errorMessage>
    </validationRules>
</CustomObject>